<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/affordability_top_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AffordabilityFragment" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:padding="@dimen/default_gap"
        android:src="@drawable/afford_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:padding="@dimen/default_gap" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_gap" >

            <TextView
                android:id="@+id/affordability_textview_affordability"
                style="@style/afford_label"
                android:layout_weight="0.6"
                android:text="@string/affordability_textview_affordability"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/affordability_textview_affordability_value"
                style="@style/afford_input"
                android:layout_weight="0.4"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/monthly_payment"
                style="@style/afford_label"
                android:text="@string/affordability_payment" />

            <EditText
                android:id="@+id/edittext_affordability_payment"
                style="@style/afford_input"
                android:inputType="numberDecimal"
                android:text="500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/interest_rate"
                style="@style/afford_label"
                android:text="@string/affordability_interest" />

            <EditText
                android:id="@+id/edittext_affordability_interest"
                style="@style/afford_input"
                android:inputType="numberDecimal"
                android:text="3.90" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/terms"
                style="@style/afford_label"
                android:text="@string/affordability_term" />

            <EditText
                android:id="@+id/edittext_affordability_term"
                style="@style/afford_input"
                android:inputType="number"
                android:text="60" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/trade_in_value"
                style="@style/afford_label"
                android:text="@string/affordability_tiv" />

            <EditText
                android:id="@+id/edittext_affordability_tiv"
                style="@style/afford_input"
                android:inputType="numberDecimal"
                android:text="0" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>